[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Ian Maze <mazeian93@outlook.com>"]
readme = "README.md"
packages = [{include = "url_shortener"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
typer = "^0.7.0"
rich = "^13.3.1"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
